Service Regression/tests/00DM0000001eO1fMAE/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ALERT__c</fullName>
        <defaultValue>&quot;ARE YOU SURE YOU WANT TO CANCEL THIS CONTRACT AND STOP BILLING?&quot;</defaultValue>
        <description>Haystak Field.ORACLE RMB field</description>
        <label>ALERT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_BPM_Process_Instance_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id for ATC contracts across all systems (webMethods, Sterling)</inlineHelpText>
        <label>ATC BPM Process Instance ID</label>
        <length>75</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ATC_Contract_Alpha_Zone__c</fullName>
        <label>Contract Alpha Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ATC_Contract_ID__c</fullName>
        <description>MS Dynamics Auto Generated Key field</description>
        <label>ATC Contract ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Contract_Info__c</fullName>
        <label>ATC Contract Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ATC_Contract_Status__c</fullName>
        <description>eSO Status</description>
        <inlineHelpText>eSO Status</inlineHelpText>
        <label>Contract Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Contract_Sys_ID__c</fullName>
        <description>eSO generated contract system identifier.</description>
        <externalId>true</externalId>
        <inlineHelpText>eSO generated contract system identifier.</inlineHelpText>
        <label>ESO Contract Sys ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ATC_Contract_Type__c</fullName>
        <description>eSO Contract Type</description>
        <inlineHelpText>eSO Contract Type</inlineHelpText>
        <label>Contract Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Delivery_Date__c</fullName>
        <formula>StartDate</formula>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ATC_Dynamics_Contract_ID__c</fullName>
        <description>This field contains the GUID from the matching Contract record in MS Dynamics and is used for the Dynamic Link to that contract.</description>
        <inlineHelpText>MS Dynamics Contract ID</inlineHelpText>
        <label>ATC Dynamics Contract ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Order_Sys_ID__c</fullName>
        <inlineHelpText>eSO generated order system identifier.</inlineHelpText>
        <label>ESO Order Sys ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Package_Name__c</fullName>
        <label>Package Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Priority_Code__c</fullName>
        <label>Priority Code</label>
        <picklist>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Sales_Order_Category__c</fullName>
        <label>Sales Order Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Notes__c</fullName>
        <description>Haystak Field.Used by the Order QA to insert notes into a contract</description>
        <inlineHelpText>Enter QA notes.</inlineHelpText>
        <label>Accounting Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Haystak Field.Action for this contract.</description>
        <inlineHelpText>Choose action for this contract.</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Contract_Id__c</fullName>
        <description>Haystak Field.Contract id from external systems</description>
        <label>Alternate Contract Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <defaultValue>&quot;Haystak&quot;</defaultValue>
        <description>Haystak Field.Business Unit Identifier</description>
        <label>BU</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_to_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back to Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Haystak Field.The account to bill the contract to.Haystak</description>
        <inlineHelpText>Choose related account</inlineHelpText>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingAddress2__c</fullName>
        <description>Haystak Field.</description>
        <formula>Bill_To_Account__r.BillingStreet + &apos; &apos; + Bill_To_Account__r.BillingCity + &apos;, &apos; + Bill_To_Account__r.BillingState + &apos; &apos; + Bill_To_Account__r.BillingPostalCode + &apos; &apos; + Bill_To_Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingAddress2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <description>Haystak Field.</description>
        <formula>TEXT(Cancellation_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>Haystak Field.Reason for contract cancellation</description>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Brand compliancy/OEM Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Receive Functionality That Was Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Performance Metrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went w/Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contracts (Case)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Op__c</fullName>
        <label>Co-Op</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <description>Haystak Field.Total of all billing items.</description>
        <label>Contract Total</label>
        <summarizedField>Billing_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Action__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, STOP</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Haystak</description>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>&quot;USD&quot;</defaultValue>
        <description>Haystak Field.</description>
        <label>Currency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Activated_in_RMB__c</fullName>
        <description>Haystak Field.</description>
        <label>Date Activated in RMB</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Approved_By_Controller__c</fullName>
        <description>Haystak Field.</description>
        <label>Date Approved By Controller</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Payment_Matched__c</fullName>
        <description>Haystak Field.</description>
        <label>Date Payment Matched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_SVOC_Id__c</fullName>
        <description>Haystak Field.</description>
        <formula>Account.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer SVOC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <inlineHelpText>The contract is delivered immediately unless there is a future date.</inlineHelpText>
        <label>APFD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dollar_Difference__c</fullName>
        <description>Haystak Field.Opportunity Amount minus the contract total.</description>
        <formula>Related_Opportunity__r.Amount -  Contract_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dollar Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FM_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FM Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_Understand_this_will_STOP_all_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Haystak Field.Stop all billing to the customer</description>
        <inlineHelpText>By clicking this box you are agreeing that you want to cancel this contract and stop all billing to the customer</inlineHelpText>
        <label>I Understand this will STOP all Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Password__c</fullName>
        <description>Haystak Field</description>
        <label>Kenshoo Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <description>Haystak Field.Formula field that reads the date and time from the last modified</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Midnight_after_APFD_DateF__c</fullName>
        <formula>DATETIMEVALUE(DATEVALUE( OLDDelivery_Date__c ))+1.29236111111111</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Midnight after APFD Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Rate__c</fullName>
        <formula>Rate__c - Previous_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLDDelivery_Date__c</fullName>
        <label>APFD Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <description>Haystak Field.</description>
        <formula>Related_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Cases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Order entry case associated with this contract.</description>
        <label>Order Entry Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contract</relationshipLabel>
        <relationshipName>Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <description>Haystak Field.Purchase Order Number</description>
        <inlineHelpText>Enter Purchase Order Number</inlineHelpText>
        <label>PO#</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>Haystak Field.Formula field that reads the parent account from the account</description>
        <formula>Account.Parent.Name</formula>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Rate__c</fullName>
        <description>display the rate of the contract being replaced in ESO</description>
        <label>Previous Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_to_bill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Haystak Field.Indicate that we are ready to bill on this contract.</description>
        <label>Ready to Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager__c</fullName>
        <description>Haystak Field.Haystak regional sales manager based on account field that is derived based on region and assigned person.</description>
        <formula>Account.Regional_Sales_Manager__c</formula>
        <label>Regional Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Cases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Haystak</description>
        <label>Related Cases</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Haystak Field.</description>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Haystak Field.Salesperson related to this contract.</description>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the contract is on a Secondary Customer, enter here, otherwise, leave blank.</inlineHelpText>
        <label>Secondary Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Secondary Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Secondary)</relationshipLabel>
        <relationshipName>Contracts_Secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingAddress2__c</fullName>
        <description>Haystak Field.</description>
        <formula>Account.ShippingStreet + &apos; &apos; + Account.ShippingCity + &apos;, &apos; + Account.ShippingState + &apos; &apos; + Account.ShippingPostalCode + &apos; &apos; + Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShippingAddress2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Line_Items__c</fullName>
        <description>Haystak Field.Count of Billing Items</description>
        <label>Total Line Items</label>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_MRR__c</fullName>
        <description>Haystak Field.Formula field that sums the total recurring revenue for product</description>
        <label>Total MRR</label>
        <summarizedField>Billing_Item__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Technology_Fee__c</fullName>
        <description>Haystak Field. Sum of tech fees (non recurring)</description>
        <label>Total Technology Fee</label>
        <summarizedField>Billing_Item__c.Technology_Fee__c</summarizedField>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zero_Dollar_Contract__c</fullName>
        <label>Zero Dollar Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eSO_Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to user record, this is captured when the netid is used to find the sfdc user.</description>
        <label>eSO Created By (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eSO_Created_By__c</fullName>
        <label>eSO Created By (NetId)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ATC_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>ATC_Contract_ID__c</columns>
        <columns>ATC_Contract_Status__c</columns>
        <columns>ATC_Contract_Type__c</columns>
        <columns>ATC_Package_Name__c</columns>
        <columns>ATC_Priority_Code__c</columns>
        <columns>ATC_Sales_Order_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>ATC Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
        <sharedTo>
            <role>ATG</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>ATC_Contract_Status__c</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <sharedTo>
            <role>ATG</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
        <sharedTo>
            <role>ATG</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
        <sharedTo>
            <role>ATG</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
        <sharedTo>
            <role>ATG</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
        <sharedTo>
            <role>ATG</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
        <sharedTo>
            <role>ATG</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ATC_Contract</fullName>
        <active>true</active>
        <description>Contract Type matching the ATC Contract in MS Dynamics CRM</description>
        <label>ATC Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Haystak_Contract</fullName>
        <active>true</active>
        <description>Generic Haystak contract record</description>
        <label>Haystak Contract</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>